<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    android:background="#FFFFFF"
    android:padding="20dp"
    tools:ignore="ExtraText">

    <TextView
        android:id="@+id/nama_toko"
        android:layout_width="231dp"
        android:layout_height="38dp"
        android:layout_gravity="center"
        android:paddingStart="35dp"
        android:text="@string/nama"
        android:layout_marginTop="25dp"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:textStyle="bold"
        tools:ignore="RtlSymmetry" />

    <ImageView
        android:id="@+id/logo_image"
        android:layout_width="256dp"
        android:layout_height="189dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="50dp"
        android:src="@drawable/images"
        android:contentDescription="@string/app_name" />

    <TextView
        android:id="@+id/slogan_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/slogan"
        android:textColor="@color/black"
        android:textSize="18sp"/>


    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/username"
        android:hint="@string/username"
        android:textColorHint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        app:boxStrokeColor="@color/blue">
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPersonName"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/password"
        android:hint="@string/password"
        app:passwordToggleEnabled="true"
        app:boxStrokeColor="@color/blue"
        app:passwordToggleTint="@color/black"
        android:textColorHint="@color/black"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        >
        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:inputType="textPassword" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:layout_width="205dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:text="@string/lupa_Password"
        android:textColor="@color/black" />

    <Button
        android:layout_width="364dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="#000000"
        android:text="@string/signin"
        android:textColor="#fff"
        tools:ignore="UsingOnClickInXml" />

    <Button
        android:layout_width="363dp"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_margin="5dp"
        android:background="#00000000"
        android:elevation="0dp"
        android:text="@string/newhere"
        android:textColor="@color/black"
        />



</LinearLayout>